--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -1041,3 +1041,4 @@ btcWallet.confirmedNonSpendableBalance=Balance on confirmation:
 order.stop=Stop-rate
 myorders.stoporders=Stop orders
 myorders.stopRate=Stop-rate
+myorders.limitRate=Limit-rate
