--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -1027,3 +1027,4 @@ refferal.structure=Реферальная структура
 order.stop=Стоп-курс
 myorders.stoporders=Stop orders
 myorders.stopRate=Stop-rate
+myorders.limitRate=Limit-rate
