--- a/Controller/src/main/resources/messages_th.properties
+++ b/Controller/src/main/resources/messages_th.properties
@@ -723,3 +723,4 @@ refferal.structure=Referral structure
 order.stop=Stop-rate
 myorders.stoporders=Stop orders
 myorders.stopRate=Stop-rate
+myorders.limitRate=Limit-rate
