--- a/Controller/src/main/resources/messages_ar.properties
+++ b/Controller/src/main/resources/messages_ar.properties
@@ -1224,3 +1224,4 @@ btcWallet.confirmedNonSpendableBalance=Balance on confirmation:
 order.stop=Stop-rate
 myorders.stoporders=Stop orders
 myorders.stopRate=Stop-rate
+myorders.limitRate=Limit-rate
