--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -937,3 +937,4 @@ btcWallet.confirmedNonSpendableBalance=Balance on confirmation:
 order.stop=Stop-rate
 myorders.stoporders=Stop orders
 myorders.stopRate=Stop-rate
+myorders.limitRate=Limit-rate
