--- a/Controller/src/main/resources/messages_cn.properties
+++ b/Controller/src/main/resources/messages_cn.properties
@@ -1018,3 +1018,13 @@ admin.order.acceptsuccess=Order {0} accepted successfully
 manageOrder.title=Manage orders
 orderinfo.orderSource=Source order
 orderinfo.orderChildren=Derived orders
+withdraw.rejectError.title=Withdraw request rejected
+withdraw.rejectError.body=Your withdraw request #{0} was rejected automatically. Cause: {1}
+withdraw.rejectReview.title=Withdraw request not posted
+withdraw.rejectReview.body=Your withdraw request #{0} is not posted and is passed to administrator review
+withdraw.reject.reason.general=Error while posting
+withdraw.reject.reason.invalidAccount=Invalid address or account number
+withdraw.reject.reason.timeoutExceeded=Timeout exceeded
+withdraw.wallet.insufficientCosts.title=Insufficient costs for auto-withdraw
+withdraw.wallet.insufficientCosts.body=Insufficient costs for auto-withdraw on {0} wallet!
+merchants.withdraw.DECLINED_ERROR=Rejected
