--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -1131,3 +1131,13 @@ admin.order.acceptsuccess=Ордер {0} успешно принят
 manageOrder.title=Управление ордерами
 orderinfo.orderSource=Исходный ордер
 orderinfo.orderChildren=Производные ордера
+withdraw.rejectError.title=Заявка на вывод отвергнута
+withdraw.rejectError.body=Ваша заявка на вывод #{0} была отвергнута автоматически. Причина: {1}
+withdraw.rejectReview.title=Заявка на вывод не проведена
+withdraw.rejectReview.body=Ваша заявка на вывод #{0} не проведена и передана на рассмотрение администраторам
+withdraw.reject.reason.general=Ошибка при проведении запроса
+withdraw.reject.reason.invalidAccount=Некорректный адрес или номер счёта
+withdraw.reject.reason.timeoutExceeded=Превышен лимит ожидания
+withdraw.wallet.insufficientCosts.title=Недостаточно средств для автовывода
+withdraw.wallet.insufficientCosts.body=Недостаточно средств для автовывода на кошельке {0}!
+merchants.withdraw.DECLINED_ERROR=Отвергнут
