stop-orders done

--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -938,3 +938,5 @@ order.stop=Stop-rate
 myorders.stoporders=Stop orders
 myorders.stopRate=Stop-rate
 myorders.limitRate=Limit-rate
+stopordersearch.title=Stop-oredrs search
+orderinfo.changed=Changed
