--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -1025,6 +1025,8 @@ btcWallet.changeFee=Изменить
 admin.referralAccruals=Реферальные начисления
 refferal.structure=Реферальная структура
 order.stop=Стоп-курс
-myorders.stoporders=Stop orders
-myorders.stopRate=Stop-rate
-myorders.limitRate=Limit-rate
+myorders.stoporders=Стоп-ордера
+myorders.stopRate=Стоп-курс
+myorders.limitRate=Лимит-курс
+stopordersearch.title=Поиск стоп-ордеров
+orderinfo.changed=Изменен
