--- a/Controller/src/main/resources/messages_ar.properties
+++ b/Controller/src/main/resources/messages_ar.properties
@@ -1225,3 +1225,5 @@ order.stop=Stop-rate
 myorders.stoporders=Stop orders
 myorders.stopRate=Stop-rate
 myorders.limitRate=Limit-rate
+stopordersearch.title=Stop-oredrs search
+orderinfo.changed=Changed
