--- a/Controller/src/main/resources/messages_th.properties
+++ b/Controller/src/main/resources/messages_th.properties
@@ -724,3 +724,5 @@ order.stop=Stop-rate
 myorders.stoporders=Stop orders
 myorders.stopRate=Stop-rate
 myorders.limitRate=Limit-rate
+stopordersearch.title=Stop-oredrs search
+orderinfo.changed=Changed
