stop-orders done

--- a/Controller/src/main/resources/messages_cn.properties
+++ b/Controller/src/main/resources/messages_cn.properties
@@ -1029,3 +1029,8 @@ withdraw.wallet.insufficientCosts.title=Insufficient costs for auto-withdraw
 withdraw.wallet.insufficientCosts.body=Insufficient costs for auto-withdraw on {0} wallet!
 merchants.withdraw.DECLINED_ERROR=Rejected
 order.stop=Stop-rate
+myorders.stoporders=Stop orders
+myorders.stopRate=Stop-rate
+myorders.limitRate=Limit-rate
+stopordersearch.title=Stop-oredrs search
+orderinfo.changed=Changed
