add admin interface

--- a/Controller/src/main/resources/messages_ar.properties
+++ b/Controller/src/main/resources/messages_ar.properties
@@ -1148,7 +1148,7 @@ admin.user.transactions.downloadHistory=Download history
 admin.user.transactions.downloadHistory.choosePeriod=Choose period
 btcWallet.title=Bitcoin Wallet
 btcWallet.history.title=Transactions history
-btcWallet.send.title=Send bitcoins
+btcWallet.send.title=Send
 btcWallet.history.txid=Transaction ID
 btcWallet.address=Address
 btcWallet.history.category=Category
@@ -1225,3 +1225,5 @@ admin.order.acceptsuccess=Order {0} accepted successfully
 manageOrder.title=Manage orders
 orderinfo.orderSource=Source order
 orderinfo.orderChildren=Derived orders
+cryptoWallets.title=Cryptocurrency wallets
+ltcWallet.title=Litecoin Wallet
