--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -950,7 +950,7 @@ admin.user.transactions.downloadHistory=Загрузить историю
 admin.user.transactions.downloadHistory.choosePeriod=Выберите период
 btcWallet.title=Кошелёк Bitcoin
 btcWallet.history.title=История транзакций
-btcWallet.send.title=Отправить биткоины
+btcWallet.send.title=Отправить
 btcWallet.history.txid=ID транзакции
 btcWallet.address=Адрес
 btcWallet.history.category=Категория
@@ -1027,3 +1027,5 @@ admin.order.acceptsuccess=Ордер {0} успешно принят
 manageOrder.title=Управление ордерами
 orderinfo.orderSource=Исходный ордер
 orderinfo.orderChildren=Производные ордера
+cryptoWallets.title=Кошельки криптовалют
+ltcWallet.title=Кошелёк Litecoin
