--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -194,7 +194,7 @@ merchants.submitPayment=confirm payment
 merchants.successfulBalanceDeposit=You have successfully deposited {0}. Commission {1}%, funds transferred to your wallet: {2}
 merchants.successfulBalanceWithdraw=you have successfully withdrawn in the amount: {0}
 merchants.successfulMoneyInput=Thank you. money was input in your wallet.
-merchants.depositNotification.body=Please pay {0} on the checking account {1} within next 96 hours
+merchants.depositNotification.body=Please pay {0} on the checking account <b id=address-to-pay style="font-size:16px"> {1} </b> <button id=address-copy class="btn address-copy">Copy</button> within next 96 hours
 merchants.depositNotificationWithCurrencyCNY.body=Please pay {0} on the wallet {1} <br> \
     帐号：110923954410401, <br> \
     开户行：招商银行北京东直门支行
@@ -937,7 +937,6 @@ admin.admin.ref.showRefsNull=Show 0 amount
 refferal.structure=Referral structure
 
 btcWallet.balance=Spendable balance:
-btcWallet.confirmedNonSpendableBalance=Balance on confirmation: 
 admin.order.acceptsuccess=Order {0} accepted successfully
 manageOrder.title=Manage orders
 orderinfo.orderSource=Source order
@@ -948,7 +947,8 @@ refill.createError = Error while the refill request creation
 merchants.refillNotification.header=Exrates Refill notification
 merchants.refillNotification.WAITING_CONFIRMATION_USER=Your refill request #{0} through system {1} has been created and wait for your confirmation
 merchants.refillNotification.WAITING_CONFIRMATION_USER.lifetime=Your refill request #{0} through system {1} has been created and wait for your confirmation. Please confirm the payment within next {2} hours
-merchants.refillNotification.ON_PENDING=Your refill request #{0} through system {1} has been created and wait for payment
+#merchants.refillNotification.ON_PENDING=Your refill request #{0} through system {1} has been created and wait for payment
+merchants.refillNotification.ON_PENDING=The address for refill {0} through system {1} has been generated and wait for payment
 merchants.refillNotification.ON_PENDING.lifetime=Your refill request #{0} through system {1} has been created and wait for payment. Please make the payment within next {2} hours
 merchants.refillNotification.CONFIRMED_USER=Your refill request #{0} has been confirmed and will be reviewed by the administrator
 merchants.refillNotification.IN_WORK_OF_ADMIN=Your refill request #{0} is being reviewing by the administrator
@@ -963,7 +963,7 @@ merchants.refillNotification.EXPIRED=Your refill request #{0}  has been expired
 merchants.refillNotification.DECLINED_ADMIN=Your refill request #{0}  has been declined
 merchants.addition=Added to certify payment
 merchants.refill.invoice=Please pay {0} on the wallet {1}
-merchants.refill.btc=Please pay {0} on the address {1}
+merchants.refill.btc=Please pay {0} on the address <b id=address-to-pay style="font-size:16px"> {1} </b> <button id=address-copy class="btn address-copy">Copy</button>
 merchants.refill.ON_PENDING=Waiting payment
 merchants.refill.WAITING_CONFIRMATION_USER=Wait
 merchants.refill.CONFIRMED_USER=Confirmed
@@ -1010,10 +1010,16 @@ refill.receiptScan.absent= Scan the receipt is not attached
 refill.payerData= Details of the sender of payment
 refill.hash=Hash
 refill.merchantTransactionId=Merchant transaction
-merchants.refill.edr=Please pay {0} on the address {1}
+#merchants.refill.edr=Please pay {0} on the address {1}
+merchants.refill.edr=Please pay on the address <b id=address-to-pay style="font-size:16px"> {0} </b> <button id=address-copy class="btn address-copy">Copy</button>
 refill.accepted.title=Refill is accepted
 refill.declined.title=Withdrawal is declined
 merchants.modalOutputCommissionMerchant=Merchant Fee will be : __amount __currency __percent
 merchants.modalInputCommissionMerchant=Merchant Fee will be : __amount __currency __percent
 merchant.commission.warning= WARNING! The merchant's fee is indicative and can be changed by the merchant!
 refill.confirmations=Confirmations
+transactionsourcetype.REFILL=REFILL
+refill.messageAboutCurrentAddress=Your address for refill: <b id=address-to-pay style="font-size:16px"> {0} </b> <button id=address-copy class="btn address-copy">Copy</button>
+refill.messageAboutCurrentAddressSimple=Your address for refill:
+refill.copy=Copy address
+refill.generate=Generate new address
