refill_request - new structure - fix'ы

--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -1008,7 +1008,7 @@ merchants.promptRefillRequestDecline=Are you sure you want to decline the reques
 refill.statusModificationDate=Date of setting status
 refill.receiptScan.absent= Scan the receipt is not attached
 refill.payerData= Details of the sender of payment
-refill.hash=Hash
+refill.address=Address
 refill.merchantTransactionId=Merchant transaction
 #merchants.refill.edr=Please pay {0} on the address {1}
 merchants.refill.edr=Please pay on the address <b id=address-to-pay style="font-size:16px"> {0} </b> <button id=address-copy class="btn address-copy">Copy</button>
