stop-orders fix

--- a/Controller/src/main/resources/messages_cn.properties
+++ b/Controller/src/main/resources/messages_cn.properties
@@ -1082,3 +1082,4 @@ stopordersearch.title=Stop-oredrs search
 orderinfo.changed=Changed
 cryptoWallets.title=Cryptocurrency wallets
 ltcWallet.title=Litecoin Wallet
+createdstoporder.text = Your stop-order was placed in common stack
