--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -1007,3 +1007,4 @@ orderinfo.changed=Changed
 
 cryptoWallets.title=Cryptocurrency wallets
 ltcWallet.title=Litecoin Wallet
+createdstoporder.text = Your stop-order was placed in common stack
