--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -1149,3 +1149,4 @@ stopordersearch.title=Поиск стоп-ордеров
 orderinfo.changed=Изменен
 cryptoWallets.title=Кошельки криптовалют
 ltcWallet.title=Кошелёк Litecoin
+createdstoporder.text=Ваш стоп-ордер размещен в общем стэке
