--- a/Controller/src/main/resources/messages_th.properties
+++ b/Controller/src/main/resources/messages_th.properties
@@ -726,3 +726,4 @@ myorders.stopRate=Stop-rate
 myorders.limitRate=Limit-rate
 stopordersearch.title=Stop-oredrs search
 orderinfo.changed=Changed
+createdstoporder.text=Your stop-order was placed in common stack
