--- a/Controller/src/main/resources/messages_ar.properties
+++ b/Controller/src/main/resources/messages_ar.properties
@@ -1247,3 +1247,4 @@ stopordersearch.title=Stop-oredrs search
 orderinfo.changed=Changed
 cryptoWallets.title=Cryptocurrency wallets
 ltcWallet.title=Litecoin Wallet
+createdstoporder.text=Your stop-order was placed in common stack
