--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -1089,4 +1089,4 @@ orderinfo.changed=Changed
 input.warning.XRP=IMPORTANT: The first time you deposit to a Ripple deposit address, 20 XRP will be held there in order to reserve the address. This is because the Ripple network requires a minimum of 20 XRP to be in any active address. The money does not go to anyone, and the difference will be credited to your account if the minimum requirement is ever lowered. Once you have funded your deposit address with 20 XRP, you will be able to deposit any amount and receive your full deposit. Please note that if you generate a new deposit address, you will have to fund that one with 20 XRP as well.
 cryptoWallets.title=Cryptocurrency wallets
 ltcWallet.title=Litecoin Wallet
-merchant.ripple.emptyRefill=Refill on {0}. No transafer to account because of 20 xrp must holds on your account
+merchant.ripple.emptyRefill=Refill on {0}. No transfer to account because of 20 xrp must holds on your account
