add parameters for withdraw

--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -1090,3 +1090,5 @@ input.warning.XRP=IMPORTANT: The first time you deposit to a Ripple deposit addr
 cryptoWallets.title=Cryptocurrency wallets
 ltcWallet.title=Litecoin Wallet
 merchant.ripple.emptyRefill=Refill on {0}. No transfer to account because of 20 xrp must holds on your account
+merchants.modalOutputAddressTag=Destination tag
+merchants.withdrawDetails.destinationTag=Destination tag
