--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -1111,4 +1111,5 @@ orderinfo.changed=Changed
 cryptoWallets.title=Cryptocurrency wallets
 ltcWallet.title=Litecoin Wallet
 createdstoporder.text=Your stop-order was placed in common stack
+dashWallet.title=Dash Wallet
 transactionsourcetype.STOP_ORDER=STOP-ORDER
