--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -1150,4 +1150,5 @@ orderinfo.changed=Изменен
 cryptoWallets.title=Кошельки криптовалют
 ltcWallet.title=Кошелёк Litecoin
 createdstoporder.text=Ваш стоп-ордер размещен в общем стэке
+dashWallet.title=Кошелёк Dash
 transactionsourcetype.STOP_ORDER=СТОП-ОРДЕР
