--- a/Controller/src/main/resources/messages_cn.properties
+++ b/Controller/src/main/resources/messages_cn.properties
@@ -1083,4 +1083,5 @@ orderinfo.changed=Changed
 cryptoWallets.title=Cryptocurrency wallets
 ltcWallet.title=Litecoin Wallet
 createdstoporder.text = Your stop-order was placed in common stack
+dashWallet.title=Dash Wallet
 transactionsourcetype.STOP_ORDER=STOP-ORDER
