--- a/Controller/src/main/resources/messages_cn.properties
+++ b/Controller/src/main/resources/messages_cn.properties
@@ -1083,3 +1083,4 @@ orderinfo.changed=Changed
 cryptoWallets.title=Cryptocurrency wallets
 ltcWallet.title=Litecoin Wallet
 createdstoporder.text = Your stop-order was placed in common stack
+transactionsourcetype.STOP_ORDER=STOP-ORDER
