--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -1150,3 +1150,4 @@ orderinfo.changed=Изменен
 cryptoWallets.title=Кошельки криптовалют
 ltcWallet.title=Кошелёк Litecoin
 createdstoporder.text=Ваш стоп-ордер размещен в общем стэке
+transactionsourcetype.STOP_ORDER=СТОП-ОРДЕР
