--- a/Controller/src/main/resources/messages_ar.properties
+++ b/Controller/src/main/resources/messages_ar.properties
@@ -1249,3 +1249,5 @@ stopordersearch.title=Stop-oredrs search
 orderinfo.changed=Changed
 cryptoWallets.title=Cryptocurrency wallets
 ltcWallet.title=Litecoin Wallet
+merchants.refill.xrp=Payment Address: {0}   <br>\
+ Payment Destination TAG: {1}
