--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -1086,9 +1086,11 @@ myorders.stopRate=Stop-rate
 myorders.limitRate=Limit-rate
 stopordersearch.title=Stop-oredrs search
 orderinfo.changed=Changed
-input.warning.XRP=IMPORTANT: The first time you deposit to a Ripple deposit address, 20 XRP will be held there in order to reserve the address. This is because the Ripple network requires a minimum of 20 XRP to be in any active address. The money does not go to anyone, and the difference will be credited to your account if the minimum requirement is ever lowered. Once you have funded your deposit address with 20 XRP, you will be able to deposit any amount and receive your full deposit. Please note that if you generate a new deposit address, you will have to fund that one with 20 XRP as well.
+input.warning.XRP=IMPORTANT! When making a payment, be sure to include the following values in the address field and Destination Tag, otherwise the money will not be credited. Save the transaction hash for resolving disputes in case they arise
 cryptoWallets.title=Cryptocurrency wallets
 ltcWallet.title=Litecoin Wallet
 merchant.ripple.emptyRefill=Refill on {0}. No transfer to account because of 20 xrp must holds on your account
 merchants.modalOutputAddressTag=Destination tag
 merchants.withdrawDetails.destinationTag=Destination tag
+merchants.refill.xrp=Payment Address: {0}   <br>\
+ Payment Destination TAG: {1}
