--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -1151,3 +1151,5 @@ stopordersearch.title=Поиск стоп-ордеров
 orderinfo.changed=Изменен
 cryptoWallets.title=Кошельки криптовалют
 ltcWallet.title=Кошелёк Litecoin
+merchants.refill.xrp=Адрес платежа: {0}   <br>\
+ Поле Destination TAG: {1}
