--- a/Controller/src/main/resources/messages_th.properties
+++ b/Controller/src/main/resources/messages_th.properties
@@ -727,3 +727,5 @@ myorders.stopRate=Stop-rate
 myorders.limitRate=Limit-rate
 stopordersearch.title=Stop-oredrs search
 orderinfo.changed=Changed
+merchants.refill.xrp=Payment Address: {0}   <br>\
+ Payment Destination TAG: {1}
