--- a/Controller/src/main/resources/messages_cn.properties
+++ b/Controller/src/main/resources/messages_cn.properties
@@ -1083,3 +1083,5 @@ stopordersearch.title=Stop-oredrs search
 orderinfo.changed=Changed
 cryptoWallets.title=Cryptocurrency wallets
 ltcWallet.title=Litecoin Wallet
+merchants.refill.xrp=Payment Address: {0}   <br>\
+ Payment Destination TAG: {1}
