--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -1112,3 +1112,5 @@ stopordersearch.title=Stop-oredrs search
 orderinfo.changed=Changed
 cryptoWallets.title=Cryptocurrency wallets
 ltcWallet.title=Litecoin Wallet
+merchants.refill.xrp=Payment Address: {0}   <br>\
+ Payment Destination TAG: {1}
