--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -1009,3 +1009,4 @@ cryptoWallets.title=Cryptocurrency wallets
 ltcWallet.title=Litecoin Wallet
 createdstoporder.text = Your stop-order was placed in common stack
 transactionsourcetype.STOP_ORDER=STOP-ORDER
+merchants.invoiceDetails.additional=Additional details
