--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -1151,3 +1151,4 @@ cryptoWallets.title=Кошельки криптовалют
 ltcWallet.title=Кошелёк Litecoin
 createdstoporder.text=Ваш стоп-ордер размещен в общем стэке
 transactionsourcetype.STOP_ORDER=СТОП-ОРДЕР
+merchants.invoiceDetails.additional=Дополнительные реквизиты
