--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -1112,3 +1112,4 @@ cryptoWallets.title=Cryptocurrency wallets
 ltcWallet.title=Litecoin Wallet
 createdstoporder.text=Your stop-order was placed in common stack
 transactionsourcetype.STOP_ORDER=STOP-ORDER
+merchants.invoiceDetails.additional=Additional details
