add bank additional details - 2

--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -1113,3 +1113,4 @@ ltcWallet.title=Litecoin Wallet
 createdstoporder.text=Your stop-order was placed in common stack
 transactionsourcetype.STOP_ORDER=STOP-ORDER
 merchants.invoiceDetails.additional=Additional details
+merchants.depositNotificationWithCurrency.body = Refill request created. Please pay {0} on the wallet {1} and confirm the request within next 72 hours
