--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -1152,3 +1152,4 @@ ltcWallet.title=Кошелёк Litecoin
 createdstoporder.text=Ваш стоп-ордер размещен в общем стэке
 transactionsourcetype.STOP_ORDER=СТОП-ОРДЕР
 merchants.invoiceDetails.additional=Дополнительные реквизиты
+merchants.depositNotificationWithCurrency.body = Refill request created. Please pay {0} on the wallet {1} and confirm the request within next 72 hours
