--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -1097,3 +1097,4 @@ merchants.refill.xrp=Payment Address: {0}   <br>\
 createdstoporder.text = Your stop-order was placed in common stack
 dashWallet.title=Dash Wallet
 transactionsourcetype.STOP_ORDER=STOP-ORDER
+merchants.withdrawNotification.ON_BCH_EXAM=Withdraw confirmed
