--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -1156,3 +1156,4 @@ merchants.refill.xrp=Адрес платежа: {0}   <br>\
 createdstoporder.text=Ваш стоп-ордер размещен в общем стэке
 dashWallet.title=Кошелёк Dash
 transactionsourcetype.STOP_ORDER=СТОП-ОРДЕР
+merchants.refillNotification.header=Exrates Refill notification
