remove DB fields to merchant class

--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -1004,6 +1004,7 @@ merchants.refillNotification.TAKEN_FROM_EXAM=Your refill request #{0} is being r
 merchants.refillNotification.REVOKED_USER=Your refill request #{0} has been revoked
 merchants.refillNotification.CREATED_BY_FACT=Payment was detected and request #{0} has been created
 merchants.refillNotification.ON_BCH_EXAM=Your refill request #{0} is waiting for blockchain confirmations
+merchants.refillNotification.ON_INNER_TRANSFERRING=Your refill request #{0} has been received
 merchants.refillNotification.ACCEPTED_ADMIN=Your refill request #{0}  has been accepted
 merchants.refillNotification.ACCEPTED_AUTO=Your refill request #{0}  has been accepted
 merchants.refillNotification.EXPIRED=Your refill request #{0}  has been expired
