adminka: change in Reports + fix.

--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -1025,6 +1025,7 @@ merchants.refill.ACCEPTED_ADMIN=Accepted
 merchants.refill.ACCEPTED_AUTO=Accepted
 merchants.refill.DECLINED_ADMIN=Declined
 merchants.refill.EXPIRED=Expired
+merchants.refill.ON_INNER_TRANSFERRING=Received
 admin.refillRequests=Refill requests
 admin.refill.new=New
 admin.refill.accepted=Accepted
