--- a/Controller/src/main/resources/messages_ar.properties
+++ b/Controller/src/main/resources/messages_ar.properties
@@ -1242,6 +1242,8 @@ merchants.refill.xrp=Payment Address: {0}   <br>\
  Payment Destination TAG: {1}
 createdstoporder.text=Your stop-order was placed in common stack
 transactionsourcetype.STOP_ORDER=STOP-ORDER
+merchants.invoiceDetails.additional=Additional details
+merchants.depositNotificationWithCurrency.body = Refill request created. Please pay {0} on the wallet {1} and confirm the request within next 72 hours
 dashWallet.title=Dash Wallet
 merchants.invoiceDetails.additional=Additional details
 merchants.depositNotificationWithCurrency.body = Refill request created. Please pay {0} on the wallet {1} and confirm the request within next 72 hours
