--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -1099,4 +1099,6 @@ merchants.refill.xrp=Payment Address: {0}   <br>\
 createdstoporder.text = Your stop-order was placed in common stack
 dashWallet.title=Dash Wallet
 transactionsourcetype.STOP_ORDER=STOP-ORDER
+merchants.invoiceDetails.additional=Additional details
 merchants.withdrawNotification.ON_BCH_EXAM=Withdraw confirmed
+merchants.depositNotificationWithCurrency.body = Refill request created. Please pay {0} on the wallet {1} and confirm the request within next 72 hours
