--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -1117,3 +1117,5 @@ merchants.refill.xrp=Payment Address: {0}   <br>\
 createdstoporder.text=Your stop-order was placed in common stack
 dashWallet.title=Dash Wallet
 transactionsourcetype.STOP_ORDER=STOP-ORDER
+merchants.invoiceDetails.additional=Additional details
+merchants.depositNotificationWithCurrency.body = Refill request created. Please pay {0} on the wallet {1} and confirm the request within next 72 hours
