--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -1156,4 +1156,6 @@ merchants.refill.xrp=Адрес платежа: {0}   <br>\
 createdstoporder.text=Ваш стоп-ордер размещен в общем стэке
 dashWallet.title=Кошелёк Dash
 transactionsourcetype.STOP_ORDER=СТОП-ОРДЕР
+merchants.invoiceDetails.additional=Дополнительные реквизиты
 merchants.refillNotification.header=Exrates Refill notification
+merchants.depositNotificationWithCurrency.body = Refill request created. Please pay {0} on the wallet {1} and confirm the request within next 72 hours
