--- a/Controller/src/main/resources/messages_cn.properties
+++ b/Controller/src/main/resources/messages_cn.properties
@@ -402,17 +402,6 @@ merchants.waiting = 期望
 emailsubmitChangeFinPassword.subject =确认密码变更exrates.me金融
 dashboard.sellOrders = 销售订单：
 merchants.depositNotification.body =请支付 {0} {1} 钱包 在48小时内
-#not translated
-merchants.depositNotificationWithCurrency.body = 請付人民幣 {0} 在錢包 {1} <br> \
-    ICBC <br> \
-    中国北京市朝阳区朝阳门外市场街20号中保大厦首层<br>\
-    ICBC ANTON MAZNYI<br>\
-    6212260200108499001<br>\
-    or China construction Bank<br>\
-    中国北京市朝阳区朝外大街头条甲93号<br>\
-    CONSTRUCTION <br> \
-    ANTON MAZNYI <br> \
-    6217000010079289347
 merchants.depositNotificationWithCurrencyCNY.body =  請付人民幣 {0} 在錢包 {1} <br> \
     帐号：110923954410401, <br> \
     开户行：招商银行北京东直门支行
@@ -1088,3 +1077,5 @@ merchants.refill.xrp=Payment Address: {0}   <br>\
 createdstoporder.text = Your stop-order was placed in common stack
 dashWallet.title=Dash Wallet
 transactionsourcetype.STOP_ORDER=STOP-ORDER
+merchants.invoiceDetails.additional=Additional details
+merchants.depositNotificationWithCurrency.body = Refill request created. Please pay {0} on the wallet {1} and confirm the request within next 72 hours
