--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -1153,4 +1153,4 @@ createdstoporder.text=Ваш стоп-ордер размещен в общем 
 dashWallet.title=Кошелёк Dash
 transactionsourcetype.STOP_ORDER=СТОП-ОРДЕР
 merchants.invoiceDetails.additional=Дополнительные реквизиты
-merchants.depositNotificationWithCurrency.body = Refill request created. Please pay {0} on the wallet {1} and confirm the request within next 72 hours
+merchants.depositNotificationWithCurrency.body = Заявка на ввод средств создана. Пожалуйста, оплатите {0} на расчетный счет {1} и подтвердите заявку в течение 72 часов
