add creating request from wallet

--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -1102,3 +1102,6 @@ transactionsourcetype.STOP_ORDER=STOP-ORDER
 merchants.invoiceDetails.additional=Additional details
 merchants.withdrawNotification.ON_BCH_EXAM=Withdraw confirmed
 merchants.depositNotificationWithCurrency.body = Refill request created. Please pay {0} on the wallet {1} and confirm the request within next 72 hours
+btcWallet.createRequest=Create refill request
+btcWallet.txDetails=Transaction details
+btcWallet.noAddress=Address not found in the database
