--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -1105,3 +1105,9 @@ merchants.depositNotificationWithCurrency.body = Refill request created. Please 
 btcWallet.createRequest=Create refill request
 btcWallet.txDetails=Transaction details
 btcWallet.noAddress=Address not found in the database
+transfer.amount=Amount
+transfer.receiver=Получатель
+transfer.voucher=Оформить ваучером
+transfer.modalTransferHeader=You __transferType __amount __currency __receiver
+transfer.modalTransferCommission=Transfer Fee will be : __amount __currency __percent
+transfer.modalTransferFinalSum=Amount to be transferred : __amount __currency
