--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -1105,9 +1105,13 @@ merchants.depositNotificationWithCurrency.body = Refill request created. Please 
 btcWallet.createRequest=Create refill request
 btcWallet.txDetails=Transaction details
 btcWallet.noAddress=Address not found in the database
+merchants.transferTitle=Transfer
+merchants.transfer=Transfer
+merchants.modalTransferHeader=You __transferType __amount __currency __receiver
+merchants.modalTransferCommission=Transfer Fee will be : __amount __currency __percent
+merchants.modalTransferFinalSum=Amount to be transferred : __amount __currency
+merchants.modalTransferRecipient=Enter recipient user nickname :
 transfer.amount=Amount
-transfer.receiver=Получатель
-transfer.voucher=Оформить ваучером
-transfer.modalTransferHeader=You __transferType __amount __currency __receiver
-transfer.modalTransferCommission=Transfer Fee will be : __amount __currency __percent
-transfer.modalTransferFinalSum=Amount to be transferred : __amount __currency
+merchants.transferNotification.header=Exrates Withdrawal notification
+merchants.transferNotification.POST=Your transfer request #{0} through system {1} has been posted
+merchants.transferNotification.POSTPONED_AS_VOUCHER=Your transfer request #{0} through system {1} has been created
