--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -1156,96 +1156,96 @@ merchants.refill.xrp=Адрес платежа: {0}   <br>\
 createdstoporder.text=Ваш стоп-ордер размещен в общем стэке
 dashWallet.title=Кошелёк Dash
 transactionsourcetype.STOP_ORDER=СТОП-ОРДЕР
-merchants.refillNotification.header=Exrates Refill notification
+merchants.refillNotification.header=Exrates информирование о пополнении
 merchants.invoiceDetails.additional=Дополнительные реквизиты
 merchants.depositNotificationWithCurrency.body = Заявка на ввод средств создана. Пожалуйста, оплатите {0} на расчетный счет {1} и подтвердите заявку в течение 72 часов
 
 
-merchants.refillNotification.WAITING_CONFIRMATION_USER=Your refill request #{0} through system {1} has been created and wait for your confirmation
-merchants.refillNotification.WAITING_CONFIRMATION_USER.lifetime=Your refill request #{0} through system {1} has been created and wait for your confirmation. Please confirm the payment within next {2} hours
+merchants.refillNotification.WAITING_CONFIRMATION_USER=Запрос на пополнение #{0} through system {1} создан и ожидает Вашего подтверждения
+merchants.refillNotification.WAITING_CONFIRMATION_USER.lifetime=Запрос на пополнение #{0} через {1} создан и ожидает Вашего подтверждения. Пожалуйста, подтвердите платеж в течение {2} часов
 #merchants.refillNotification.ON_PENDING=Your refill request #{0} through system {1} has been created and wait for payment
-merchants.refillNotification.ON_PENDING=The address for refill {0} through system {1} has been generated and wait for payment
-merchants.refillNotification.ON_PENDING.lifetime=Your refill request #{0} through system {1} has been created and wait for payment. Please make the payment within next {2} hours
-merchants.refillNotification.CONFIRMED_USER=Your refill request #{0} has been confirmed and will be reviewed by the administrator
-merchants.refillNotification.IN_WORK_OF_ADMIN=Your refill request #{0} is being reviewing by the administrator
-merchants.refillNotification.TAKEN_FROM_PENDING=Your refill request #{0} is being reviewing by the administrator
-merchants.refillNotification.TAKEN_FROM_EXAM=Your refill request #{0} is being reviewing by the administrator
-merchants.refillNotification.REVOKED_USER=Your refill request #{0} has been revoked
-merchants.refillNotification.CREATED_BY_FACT=Payment was detected and request #{0} has been created
-merchants.refillNotification.ON_BCH_EXAM=Your refill request #{0} is waiting for blockchain confirmations
-merchants.refillNotification.ON_INNER_TRANSFERRING=Your refill request #{0} has been received
-merchants.refillNotification.ACCEPTED_ADMIN=Your refill request #{0}  has been accepted
-merchants.refillNotification.ACCEPTED_AUTO=Your refill request #{0}  has been accepted
-merchants.refillNotification.EXPIRED=Your refill request #{0}  has been expired
-merchants.refillNotification.DECLINED_ADMIN=Your refill request #{0}  has been declined
-merchants.addition=Added to certify payment
-merchants.refill.invoice=Please pay {0} on the wallet {1}
-merchants.refill.btc=Please pay {0} on the address <b id=address-to-pay style="font-size:16px"> {1} </b> <button id=address-copy class="btn address-copy">Copy</button>
-merchants.refill.ON_PENDING=Waiting payment
-merchants.refill.WAITING_CONFIRMATION_USER=Wait
-merchants.refill.CONFIRMED_USER=Confirmed
-merchants.refill.IN_WORK_OF_ADMIN=On confirmation
-merchants.refill.TAKEN_FROM_PENDING=On confirmation
-merchants.refill.TAKEN_FROM_EXAM=On confirmation
-merchants.refill.REVOKED_USER=Revoked
-merchants.refill.CREATED_BY_FACT=Created
-merchants.refill.ON_BCH_EXAM=Confirmations passed {0}
-merchants.refill.ACCEPTED_ADMIN=Accepted
-merchants.refill.ACCEPTED_AUTO=Accepted
-merchants.refill.DECLINED_ADMIN=Declined
-merchants.refill.EXPIRED=Expired
-merchants.refill.ON_INNER_TRANSFERRING=Received
-admin.refillRequests=Refill requests
-admin.refill.new=New
-admin.refill.accepted=Accepted
-admin.refill.declined=Declined
-admin.refill.waitPayment=Wait for payment
+merchants.refillNotification.ON_PENDING=Адрес для пополнения {0} через {1} сгенерирован и ожидает оплаты
+merchants.refillNotification.ON_PENDING.lifetime=Запрос на пополнение #{0} через {1} создан и ждет оплаты. Пожалуйста, совершите оплату в течение {2} часов
+merchants.refillNotification.CONFIRMED_USER=Запрос на пополнение #{0} подтвержден и рассматривается администратором
+merchants.refillNotification.IN_WORK_OF_ADMIN=Запрос на пополнение #{0} рассматривается администратором
+merchants.refillNotification.TAKEN_FROM_PENDING=Запрос на пополнение #{0} рассматривается администратором
+merchants.refillNotification.TAKEN_FROM_EXAM=Запрос на пополнение #{0} рассматривается администратором
+merchants.refillNotification.REVOKED_USER=Запрос на пополнение #{0} отозван
+merchants.refillNotification.CREATED_BY_FACT=Платеж обнарущен и создана запись #{0}
+merchants.refillNotification.ON_BCH_EXAM=Запрос на пополнение #{0} ожидает подтверждений в blockchain
+merchants.refillNotification.ON_INNER_TRANSFERRING=Пополнение #{0} получено
+merchants.refillNotification.ACCEPTED_ADMIN=Запрос на пополнение #{0}  принят
+merchants.refillNotification.ACCEPTED_AUTO=Запрос на пополнение #{0}  принят
+merchants.refillNotification.EXPIRED=Запрос на пополнение #{0}  просрочен
+merchants.refillNotification.DECLINED_ADMIN=Запрос на пополнение #{0}  отклонен
+merchants.addition=Добавлено для подтверждения платежа
+merchants.refill.invoice=Заплатите {0} на кошелек {1}
+merchants.refill.btc=Заплатите {0} на адрес <b id=address-to-pay style="font-size:16px"> {1} </b> <button id=address-copy class="btn address-copy">Копировать</button>
+merchants.refill.ON_PENDING=Ожидание платежа
+merchants.refill.WAITING_CONFIRMATION_USER=Ожидание
+merchants.refill.CONFIRMED_USER=Подтверждено
+merchants.refill.IN_WORK_OF_ADMIN=На подтверждении
+merchants.refill.TAKEN_FROM_PENDING=На подтверждении
+merchants.refill.TAKEN_FROM_EXAM=На подтверждении
+merchants.refill.REVOKED_USER=Отозвано
+merchants.refill.CREATED_BY_FACT=Создано
+merchants.refill.ON_BCH_EXAM=Получено подтверждений {0}
+merchants.refill.ACCEPTED_ADMIN=Принято
+merchants.refill.ACCEPTED_AUTO=Приянято
+merchants.refill.DECLINED_ADMIN=Отклонено
+merchants.refill.EXPIRED=Просрочено
+merchants.refill.ON_INNER_TRANSFERRING=Получено
+admin.refillRequests=Заявка на ввод срелств
+admin.refill.new=Новая
+admin.refill.accepted=Принято
+admin.refill.declined=Отклонено
+admin.refill.waitPayment=Ожидание платежа
 admin.refill.confirmationCollecting=Blockchain confirmation
 admin.refill.All=All
-refill.merchant=Merchant
-merchants.refillDetails.recipientAccount=Recipient's account number
-merchants.refillDetails.recipientBank=Recipient's bank
-merchants.refillDetails.recipientFullName=Recipient's full name
-refill.infoModal.title=Refill request summary
-refill.requestDatetime=Date of creation
-refill.user=User
-refill.enrolledAmount=Enrolled amount
-refill.amount=Amount
-refill.currency=Currency
+refill.merchant=Мерчанта
+merchants.refillDetails.recipientAccount=Номер счета получателя
+merchants.refillDetails.recipientBank=Банк получателя
+merchants.refillDetails.recipientFullName=Полное имя получателя
+refill.infoModal.title=Информация о запросе на пополнение
+refill.requestDatetime=Дата создания
+refill.user=Пользователь
+refill.enrolledAmount=Зачислено
+refill.amount=Сумма
+refill.currency=Валюта
 refill.commission=Commission
-refill.wallet=User wallet
-refill.acceptanceDatetime=Acceptance date
+refill.wallet=Кошелек пользователя
+refill.acceptanceDatetime=Дата принятия заявки
 refill.acceptanceUser=Acceptance user
-refill.receivedAmount=Received amount
-refill.status=Status
-merchants.refillRequestAccepted=Accepted
-merchants.refillRequestAccept=Accept
-merchants.refillRequestDecline=Decline
-merchants.promptRefillRequestAccept=Are you sure you want to accept the request?
-merchants.promptRefillRequestDecline=Are you sure you want to decline the request?
-refill.statusModificationDate=Date of setting status
-refill.receiptScan.absent= Scan the receipt is not attached
-refill.payerData= Details of the sender of payment
-refill.address=Address
-refill.merchantTransactionId=Merchant transaction
+refill.receivedAmount=Полученная сумма
+refill.status=Статус
+merchants.refillRequestAccepted=Принята
+merchants.refillRequestAccept=Принять
+merchants.refillRequestDecline=Отклонить
+merchants.promptRefillRequestAccept=Принять заявку?
+merchants.promptRefillRequestDecline=Отклонить заявку?
+refill.statusModificationDate=Дата установки статуса
+refill.receiptScan.absent= Не прикреплена сканкопия квитанции
+refill.payerData= Детали об отправителя платежа
+refill.address=Адрес
+refill.merchantTransactionId=ID транзакции мерчанты
 #merchants.refill.edr=Please pay {0} on the address {1}
-merchants.refill.edr=Please pay on the address <b id=address-to-pay style="font-size:16px"> {0} </b> <button id=address-copy class="btn address-copy">Copy</button>
-refill.accepted.title=Refill is accepted
-refill.declined.title=Withdrawal is declined
-merchants.modalOutputCommissionMerchant=Merchant Fee will be : __amount __currency __percent
-merchants.modalInputCommissionMerchant=Merchant Fee will be : __amount __currency __percent
-merchant.commission.warning= WARNING! The merchant's fee is indicative and can be changed by the merchant!
-refill.confirmations=Confirmations
-transactionsourcetype.REFILL=REFILL
-refill.messageAboutCurrentAddress=Your address for refill: <b id=address-to-pay style="font-size:16px"> {0} </b> <button id=address-copy class="btn address-copy">Copy</button>
-refill.messageAboutCurrentAddressSimple=Your address for refill:
-refill.copy=Copy address
-refill.generate=Generate new address
+merchants.refill.edr=Перечислите средства на адрес <b id=address-to-pay style="font-size:16px"> {0} </b> <button id=address-copy class="btn address-copy">Копировать</button>
+refill.accepted.title=Заявка на пополнение принята
+refill.declined.title=Заявка на вывод отклонена
+merchants.modalOutputCommissionMerchant=Комиссия мерчанты : __amount __currency __percent
+merchants.modalInputCommissionMerchant=Комиссия мерчанты : __amount __currency __percent
+merchant.commission.warning= ВНИМАНИЕ! Комиссия мерчанты указана информационно и может быть изменена мерчантой!
+refill.confirmations=Подтвержления
+transactionsourcetype.REFILL=ПОПОЛНЕНИЕ
+refill.messageAboutCurrentAddress=Адрес для пополнения: <b id=address-to-pay style="font-size:16px"> {0} </b> <button id=address-copy class="btn address-copy">Копировать</button>
+refill.messageAboutCurrentAddressSimple=Адрес для пополнения:
+refill.copy=Копировать адрес
+refill.generate=Сгенерировать новый адрес
 input.warning.XRP=IMPORTANT! When making a payment, be sure to include the following values in the address field and Destination Tag, otherwise the money will not be credited. Save the transaction hash for resolving disputes in case they arise
 merchant.ripple.emptyRefill=Refill on {0}. No transfer to account because of 20 xrp must holds on your account
 merchants.modalOutputAddressTag=Destination tag
 merchants.withdrawDetails.destinationTag=Destination tag
-merchants.withdrawNotification.ON_BCH_EXAM=Withdraw confirmed
-btcWallet.createRequest=Create refill request
-btcWallet.txDetails=Transaction details
-btcWallet.noAddress=Address not found in the database
+merchants.withdrawNotification.ON_BCH_EXAM=Вывод подтвержден
+btcWallet.createRequest=Создать заяву на вывод
+btcWallet.txDetails=Данные о транзакции
+btcWallet.noAddress=Адрес не найден в базе данных
