--- a/Controller/src/main/resources/messages_ar.properties
+++ b/Controller/src/main/resources/messages_ar.properties
@@ -1336,3 +1336,4 @@ merchants.withdrawNotification.ON_BCH_EXAM=Withdraw confirmed
 btcWallet.createRequest=Create refill request
 btcWallet.txDetails=Transaction details
 btcWallet.noAddress=Address not found in the database
+action.button.ACCEPT_HOLDED_BUTTON=accept
