--- a/Controller/src/main/resources/messages_cn.properties
+++ b/Controller/src/main/resources/messages_cn.properties
@@ -1001,6 +1001,7 @@ action.button.DECLINE_BUTTON=decline
 action.button.DECLINE_HOLDED_BUTTON=decline
 action.button.POST_BUTTON=post
 action.button.POST_HOLDED_BUTTON=post
+action.button.ACCEPT_HOLDED_BUTTON=accept
 action.button.TAKE_TO_WORK_BUTTON=take
 action.button.RETURN_FROM_WORK_BUTTON=return
 
