--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -1249,3 +1249,4 @@ merchants.withdrawNotification.ON_BCH_EXAM=Вывод подтвержден
 btcWallet.createRequest=Создать заяву на вывод
 btcWallet.txDetails=Данные о транзакции
 btcWallet.noAddress=Адрес не найден в базе данных
+action.button.ACCEPT_HOLDED_BUTTON=принять
