--- a/Controller/src/main/resources/messages_th.properties
+++ b/Controller/src/main/resources/messages_th.properties
@@ -837,3 +837,4 @@ merchants.depositNotificationWithCurrency.body = Refill request created. Please 
 btcWallet.createRequest=Create refill request
 btcWallet.txDetails=Transaction details
 btcWallet.noAddress=Address not found in the database
+action.button.ACCEPT_HOLDED_BUTTON=accept
