--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -1096,6 +1096,8 @@ merchants.modalOutputAddressTag=Destination tag
 merchants.withdrawDetails.destinationTag=Destination tag
 merchants.refill.xrp=Payment Address: {0}   <br>\
  Payment Destination TAG: {1}
+merchants.refill.xlm=Payment Address: {0}   <br>\
+ Payment MEMO-ID: {1}
 createdstoporder.text = Your stop-order was placed in common stack
 dashWallet.title=Dash Wallet
 transactionsourcetype.STOP_ORDER=STOP-ORDER
