--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -1249,3 +1249,5 @@ merchants.withdrawNotification.ON_BCH_EXAM=Вывод подтвержден
 btcWallet.createRequest=Создать заяву на вывод
 btcWallet.txDetails=Данные о транзакции
 btcWallet.noAddress=Адрес не найден в базе данных
+merchants.refill.xlm=Адрес платежа: {0}   <br>\
+Поле MEMO-ID: {1}
