--- a/Controller/src/main/resources/messages_th.properties
+++ b/Controller/src/main/resources/messages_th.properties
@@ -837,3 +837,5 @@ merchants.depositNotificationWithCurrency.body = Refill request created. Please 
 btcWallet.createRequest=Create refill request
 btcWallet.txDetails=Transaction details
 btcWallet.noAddress=Address not found in the database
+merchants.refill.xlm=Payment Address: {0}   <br>\
+ Payment MEMO-ID: {1}
