--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -1210,3 +1210,5 @@ merchants.withdrawNotification.ON_BCH_EXAM=Withdraw confirmed
 btcWallet.createRequest=Create refill request
 btcWallet.txDetails=Transaction details
 btcWallet.noAddress=Address not found in the database
+merchants.refill.xlm=Payment Address: {0}   <br>\
+ Payment MEMO-ID: {1}
