set not grouping for decimals

--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -1195,7 +1195,7 @@ merchants.refill.ACCEPTED_AUTO=Приянято
 merchants.refill.DECLINED_ADMIN=Отклонено
 merchants.refill.EXPIRED=Просрочено
 merchants.refill.ON_INNER_TRANSFERRING=Получено
-admin.refillRequests=Заявка на ввод срелств
+admin.refillRequests=Заявка на ввод средств
 admin.refill.new=Новая
 admin.refill.accepted=Принято
 admin.refill.declined=Отклонено
