--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -1252,3 +1252,4 @@ btcWallet.noAddress=Адрес не найден в базе данных
 action.button.ACCEPT_HOLDED_BUTTON=принять
 merchants.refill.xlm=Адрес платежа: {0}   <br>\
 Поле MEMO-ID: {1}
+voucher.code=Выплатить ваучер
