--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -1213,3 +1213,4 @@ btcWallet.noAddress=Address not found in the database
 merchants.refill.xlm=Payment Address: {0}   <br>\
  Payment MEMO-ID: {1}
 action.button.ACCEPT_HOLDED_BUTTON=accept
+voucher.code=Voucher reedem
