--- a/Controller/src/main/resources/messages_th.properties
+++ b/Controller/src/main/resources/messages_th.properties
@@ -840,3 +840,4 @@ btcWallet.noAddress=Address not found in the database
 action.button.ACCEPT_HOLDED_BUTTON=accept
 merchants.refill.xlm=Payment Address: {0}   <br>\
  Payment MEMO-ID: {1}
+voucher.code=Voucher reedem
