--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -1118,3 +1118,4 @@ merchants.transferNotification.header=Exrates Transfer notification
 merchants.transferNotification.POSTED=Your transfer request #{0} through system {1} has been posted
 merchants.transferNotification.POSTPONED_AS_VOUCHER=Your transfer request #{0} through system {1} has been created
 voucher.code=Voucher reedem
+message.receive.voucher=Your account has been refilled for {0} {1}
