--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -1253,3 +1253,4 @@ action.button.ACCEPT_HOLDED_BUTTON=принять
 merchants.refill.xlm=Адрес платежа: {0}   <br>\
 Поле MEMO-ID: {1}
 voucher.code=Выплатить ваучер
+message.receive.voucher=Ваш аккаунт пополнен на {0} {1}
