--- a/Controller/src/main/resources/messages_ar.properties
+++ b/Controller/src/main/resources/messages_ar.properties
@@ -1340,3 +1340,4 @@ action.button.ACCEPT_HOLDED_BUTTON=accept
 merchants.refill.xlm=Payment Address: {0}   <br>\
  Payment MEMO-ID: {1}
 voucher.code=Voucher reedem
+message.receive.voucher=Your account has been refilled for {0} {1}
