--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -1214,3 +1214,4 @@ merchants.refill.xlm=Payment Address: {0}   <br>\
  Payment MEMO-ID: {1}
 action.button.ACCEPT_HOLDED_BUTTON=accept
 voucher.code=Voucher reedem
+message.receive.voucher=Your account has been refilled for {0} {1}
