add lost message

--- a/Controller/src/main/resources/messages_ar.properties
+++ b/Controller/src/main/resources/messages_ar.properties
@@ -1339,3 +1339,4 @@ btcWallet.noAddress=Address not found in the database
 action.button.ACCEPT_HOLDED_BUTTON=accept
 merchants.refill.xlm=Payment Address: {0}   <br>\
  Payment MEMO-ID: {1}
+merchants.withdraw.WAITING_REVIEWING=Waiting reviewing
