--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -948,6 +948,7 @@ merchants.withdraw.DECLINED_ADMIN=Declined
 merchants.withdraw.POSTED_MANUAL=Posted
 merchants.withdraw.POSTED_AUTO=Posted
 merchants.withdraw.IN_POSTING=On posting
+merchants.withdraw.WAITING_REVIEWING=Waiting reviewing
 admin.withdraw.auto=Auto processing
 withdrawal.statusModificationDate=Date of setting status
 withdrawal.declined.title=Withdrawal is declined
