--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -1120,3 +1120,5 @@ merchants.transferNotification.POSTED=Your transfer request #{0} through system 
 merchants.transferNotification.POSTPONED_AS_VOUCHER=Your transfer request #{0} through system {1} has been created
 voucher.code=Voucher reedem
 message.receive.voucher=Your account has been refilled for {0} {1}
+voucher.invoice.not.found=Voucher not found!
+voucher.request.limit.exceed=Requests limit exceed, try again for one hour
