--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -1252,6 +1252,8 @@ btcWallet.noAddress=Адрес не найден в базе данных
 action.button.ACCEPT_HOLDED_BUTTON=принять
 merchants.refill.xlm=Адрес платежа: {0}   <br>\
 Поле MEMO-ID: {1}
-voucher.code=Выплатить ваучер
+voucher.code=Использовать ваучер
 message.receive.voucher=Ваш аккаунт пополнен на {0} {1}
 merchants.withdraw.WAITING_REVIEWING=Ожидание проверки
+voucher.invoice.not.found=Ваучер не найден!
+voucher.request.limit.exceed=Лимит запросов исчерпан, попробуйте снова через час.
