--- a/Controller/src/main/resources/messages_th.properties
+++ b/Controller/src/main/resources/messages_th.properties
@@ -843,3 +843,5 @@ merchants.refill.xlm=Payment Address: {0}   <br>\
 voucher.code=Voucher reedem
 message.receive.voucher=Your account has been refilled for {0} {1}
 merchants.withdraw.WAITING_REVIEWING=Waiting reviewing
+voucher.invoice.not.found=Voucher not found!
+voucher.request.limit.exceed=Requests limit exceed, try again for one hour
