--- a/Controller/src/main/resources/messages_ar.properties
+++ b/Controller/src/main/resources/messages_ar.properties
@@ -1342,3 +1342,5 @@ merchants.refill.xlm=Payment Address: {0}   <br>\
 merchants.withdraw.WAITING_REVIEWING=Waiting reviewing
 voucher.code=Voucher reedem
 message.receive.voucher=Your account has been refilled for {0} {1}
+voucher.invoice.not.found=Voucher not found!
+voucher.request.limit.exceed=Requests limit exceed, try again for one hour
