--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -1216,3 +1216,5 @@ action.button.ACCEPT_HOLDED_BUTTON=accept
 voucher.code=Voucher reedem
 message.receive.voucher=Your account has been refilled for {0} {1}
 merchants.withdraw.WAITING_REVIEWING=Waiting reviewing
+voucher.invoice.not.found=Voucher not found!
+voucher.request.limit.exceed=Requests limit exceed, try again for one hour
