--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -1069,7 +1069,7 @@ merchants.modalInputCommissionMerchant=Merchant Fee will be : __amount __currenc
 merchant.commission.warning= WARNING! The merchant's fee is indicative and can be changed by the merchant!
 refill.confirmations=Confirmations
 transactionsourcetype.REFILL=REFILL
-refill.messageAboutCurrentAddress=Your address for refill: <b id=address-to-pay style="font-size:16px"> {0} </b> <button id=address-copy class="btn address-copy">Copy</button>
+refill.messageAboutCurrentAddress=Your address for refill: <b id=address-to-pay style="font-size:16px"> {0} </b>
 refill.messageAboutCurrentAddressSimple=Your address for refill:
 refill.copy=Copy address
 refill.generate=Generate new address
