--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -169,7 +169,7 @@ merchants.limitExceed=Melebihi Batas. Silakan coba lagi nanti.
 merchants.meansOfPayment=Metode pembayaran
 merchants.merchants=Pedagang
 merchants.modalInputCommission=Estimasi komisi pertukaran : __amount __currency __percent
-merchants.modalInputFinalSum=: __amount __currency
+merchants.modalInputFinalSum=Total amount will be enrolled: __amount __currency
 merchants.modalInputHeader=Anda memasukan  __amount __currency melalui alat pembayaran __merchant
 merchants.modalOutputCommission=Estimasi komisi pertukaran: __amount __currency __percent
 merchants.modalOutputFinalSum=Jumlah total yang akan ditarik: __amount __currency
