--- a/Controller/src/main/resources/messages_th.properties
+++ b/Controller/src/main/resources/messages_th.properties
@@ -337,7 +337,7 @@ myorders.buy =
 withdrawal.user = User
 orderinfo.acceptor = Acceptor
 dashboard.goOut = exit
-merchants.modalInputFinalSum = Total amount to be paid : __amount __currency
+merchants.modalInputFinalSum = Total amount will be enrolled: __amount __currency
 login.notdigit = Must not start with a digit
 merchants.modalOutputHeader = You withdraw __amount __currency through the payment system __merchant
 ordersearch.type = Type the order
