--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -1180,7 +1180,7 @@ merchants.refillNotification.EXPIRED=Запрос на пополнение #{0}
 merchants.refillNotification.DECLINED_ADMIN=Запрос на пополнение #{0}  отклонен
 merchants.addition=Добавлено для подтверждения платежа
 merchants.refill.invoice=Заплатите {0} на кошелек {1}
-merchants.refill.btc=Aдрес д <b id=address-to-pay style="font-size:16px"> {1} </b>
+merchants.refill.btc=Aдрес для пополнения <b id=address-to-pay style="font-size:16px"> {0} </b>
 merchants.refill.ON_PENDING=Ожидание платежа
 merchants.refill.WAITING_CONFIRMATION_USER=Ожидание
 merchants.refill.CONFIRMED_USER=Подтверждено
