fix stellar refill, fix admin refiill and withdraw tables

--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -1109,3 +1109,4 @@ merchants.depositNotificationWithCurrency.body = Refill request created. Please 
 btcWallet.createRequest=Create refill request
 btcWallet.txDetails=Transaction details
 btcWallet.noAddress=Address not found in the database
+transaction.hash=Hash
