--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -1060,8 +1060,8 @@ btcWallet.address=Адрес
 btcWallet.history.category=Категория
 btcWallet.history.amount=Сумма
 btcWallet.history.fee=Сумма комиссии
-btcWallet.amount=Сумма, BTC
-btcWallet.fee=Рекомендуемая комиссия, BTC/kB
+btcWallet.amount=Сумма, {0}
+btcWallet.fee=Рекомендуемая комиссия, {0}/kB
 btcWallet.history.confirmations=Подтверждения
 btcWallet.history.time=Время
 btcWallet.unconfirmedBalance=Неподтверждённый баланс:
@@ -1123,7 +1123,7 @@ admin.currencyLimits.menu.currencyPairs=Цены ордеров
 btcWallet.balance=Доступный к использованию баланс:
 btcWallet.confirmedNonSpendableBalance=Баланс на подтверждении:
 admin.referrals=Рефералы
-btcWallet.actualFee=Актуальная комиссия, BTC/kB
+btcWallet.actualFee=Актуальная комиссия, {0}/kB
 btcWallet.changeFee=Изменить
 admin.referralAccruals=Реферальные начисления
 refferal.structure=Реферальная структура
@@ -1171,7 +1171,7 @@ merchants.refillNotification.IN_WORK_OF_ADMIN=Запрос на пополнен
 merchants.refillNotification.TAKEN_FROM_PENDING=Запрос на пополнение #{0} рассматривается администратором
 merchants.refillNotification.TAKEN_FROM_EXAM=Запрос на пополнение #{0} рассматривается администратором
 merchants.refillNotification.REVOKED_USER=Запрос на пополнение #{0} отозван
-merchants.refillNotification.CREATED_BY_FACT=Платеж обнарущен и создана запись #{0}
+merchants.refillNotification.CREATED_BY_FACT=Платеж обнаружен и создана запись #{0}
 merchants.refillNotification.ON_BCH_EXAM=Запрос на пополнение #{0} ожидает подтверждений в blockchain
 merchants.refillNotification.ON_INNER_TRANSFERRING=Пополнение #{0} получено
 merchants.refillNotification.ACCEPTED_ADMIN=Запрос на пополнение #{0}  принят
@@ -1253,3 +1253,4 @@ action.button.ACCEPT_HOLDED_BUTTON=принять
 merchants.refill.xlm=Адрес платежа: {0}   <br>\
 Поле MEMO-ID: {1}
 merchants.withdraw.WAITING_REVIEWING=Ожидание проверки
+transaction.hash=Hash
