--- a/Controller/src/main/resources/messages_ar.properties
+++ b/Controller/src/main/resources/messages_ar.properties
@@ -1340,3 +1340,4 @@ action.button.ACCEPT_HOLDED_BUTTON=accept
 merchants.refill.xlm=Payment Address: {0}   <br>\
  Payment MEMO-ID: {1}
 merchants.withdraw.WAITING_REVIEWING=Waiting reviewing
+transaction.hash=Hash
