--- a/Controller/src/main/resources/messages_th.properties
+++ b/Controller/src/main/resources/messages_th.properties
@@ -841,3 +841,4 @@ action.button.ACCEPT_HOLDED_BUTTON=accept
 merchants.refill.xlm=Payment Address: {0}   <br>\
  Payment MEMO-ID: {1}
 merchants.withdraw.WAITING_REVIEWING=Waiting reviewing
+transaction.hash=Hash
