--- a/Controller/src/main/resources/messages_ar.properties
+++ b/Controller/src/main/resources/messages_ar.properties
@@ -1345,3 +1345,4 @@ voucher.code=Voucher reedem
 message.receive.voucher=Your account has been refilled for {0} {1}
 voucher.invoice.not.found=Voucher not found!
 voucher.request.limit.exceed=Requests limit exceed, try again for one hour
+voucher.vouchers=Vouchers
