--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -949,6 +949,10 @@ merchants.withdraw.POSTED_MANUAL=Posted
 merchants.withdraw.POSTED_AUTO=Posted
 merchants.withdraw.IN_POSTING=On posting
 merchants.withdraw.WAITING_REVIEWING=Waiting reviewing
+merchants.transfer.POSTPONED_AS_VOUCHER=POSTPONED AS VOUCHER
+merchants.transfer.POSTED=POSTED
+merchants.transfer.REVOKED_USER=Revoked
+merchants.transfer.CREATED_USER=CREATED
 admin.withdraw.auto=Auto processing
 withdrawal.statusModificationDate=Date of setting status
 withdrawal.declined.title=Withdrawal is declined
@@ -1125,3 +1129,4 @@ voucher.code=Voucher reedem
 message.receive.voucher=Your account has been refilled for {0} {1}
 voucher.invoice.not.found=Voucher not found!
 voucher.request.limit.exceed=Requests limit exceed, try again for one hour
+voucher.vouchers=Vouchers
