--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -1219,3 +1219,4 @@ merchants.withdraw.WAITING_REVIEWING=Waiting reviewing
 voucher.invoice.not.found=Voucher not found!
 voucher.request.limit.exceed=Requests limit exceed, try again for one hour
 transaction.hash=Hash
+voucher.vouchers=Vouchers
