--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -1258,3 +1258,4 @@ merchants.withdraw.WAITING_REVIEWING=Ожидание проверки
 transaction.hash=Hash
 voucher.invoice.not.found=Ваучер не найден!
 voucher.request.limit.exceed=Лимит запросов исчерпан, попробуйте снова через час.
+voucher.vouchers=Vouchers
