--- a/Controller/src/main/resources/messages_th.properties
+++ b/Controller/src/main/resources/messages_th.properties
@@ -846,3 +846,4 @@ merchants.withdraw.WAITING_REVIEWING=Waiting reviewing
 transaction.hash=Hash
 voucher.invoice.not.found=Voucher not found!
 voucher.request.limit.exceed=Requests limit exceed, try again for one hour
+voucher.vouchers=Vouchers
