--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -1110,3 +1110,5 @@ btcWallet.createRequest=Create refill request
 btcWallet.txDetails=Transaction details
 btcWallet.noAddress=Address not found in the database
 transaction.hash=Hash
+message.pincode.forlogin=Your pin-code for login to Exrates is {0}
+message.pincode.login.subject=You recieve pincode from Exrates
