--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -1254,3 +1254,5 @@ merchants.refill.xlm=Адрес платежа: {0}   <br>\
 Поле MEMO-ID: {1}
 merchants.withdraw.WAITING_REVIEWING=Ожидание проверки
 transaction.hash=Hash
+message.pincode.forlogin=Ваш пин-код для входа на биржу Exrates: {0}
+message.pincode.login.subject=Вы получили пин-код от Exrates
