--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -1215,3 +1215,5 @@ merchants.refill.xlm=Payment Address: {0}   <br>\
 action.button.ACCEPT_HOLDED_BUTTON=accept
 merchants.withdraw.WAITING_REVIEWING=Waiting reviewing
 transaction.hash=Hash
+message.pincode.forlogin=Your pin-code for login to Exrates is {0}
+message.pincode.login.subject=You recieve pincode from Exrates
