--- a/Controller/src/main/resources/messages_th.properties
+++ b/Controller/src/main/resources/messages_th.properties
@@ -842,3 +842,5 @@ merchants.refill.xlm=Payment Address: {0}   <br>\
  Payment MEMO-ID: {1}
 merchants.withdraw.WAITING_REVIEWING=Waiting reviewing
 transaction.hash=Hash
+message.pincode.forlogin=Your pin-code for login to Exrates is {0}
+message.pincode.login.subject=You recieve pincode from Exrates
