--- a/Controller/src/main/resources/messages_ar.properties
+++ b/Controller/src/main/resources/messages_ar.properties
@@ -1343,3 +1343,10 @@ merchants.withdraw.WAITING_REVIEWING=Waiting reviewing
 transaction.hash=Hash
 message.pincode.forlogin=Your pin-code for login to Exrates is {0}
 message.pincode.login.subject=You recieve pincode from Exrates
+message.pin_code=Pin
+message.pin_code.sent.toyou=New pin-code has been sent to your email
+message.pin_code.incorrect=Pin-code wrong
+message.error_saving_settings=Error saving settings
+message.settings_successfully_saved=Settings saved
+message.2fa.title=2-factor authorization settings
+message.2fa.via_email=Enable 2-factor authorization via email
