--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -1256,3 +1256,10 @@ merchants.withdraw.WAITING_REVIEWING=Ожидание проверки
 transaction.hash=Hash
 message.pincode.forlogin=Ваш пин-код для входа на биржу Exrates: {0}
 message.pincode.login.subject=Вы получили пин-код от Exrates
+message.pin_code=Пин
+message.pin_code.sent.toyou=Новый пин-код был выслан на ваш email
+message.pin_code.incorrect=Неверный пин-код
+message.error_saving_settings=Ошибка при сохранении настроек
+message.settings_successfully_saved=Настройки сохранены
+message.2fa.title=Настройки 2-x факторной авторизации
+message.2fa.via_email=2-х факторная авторизация через email
