--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -1257,9 +1257,18 @@ transaction.hash=Hash
 message.pincode.forlogin=Ваш пин-код для входа на биржу Exrates: {0}
 message.pincode.login.subject=Вы получили пин-код от Exrates
 message.pin_code=Пин
-message.pin_code.sent.toyou=Новый пин-код был выслан на ваш email
+message.pin_code.sent.toyou=Пожалуйста, введите пин-код, который был выслан на ваш имейл
 message.pin_code.incorrect=Неверный пин-код
 message.error_saving_settings=Ошибка при сохранении настроек
 message.settings_successfully_saved=Настройки сохранены
 message.2fa.title=Настройки 2-x факторной авторизации
 message.2fa.via_email=2-х факторная авторизация через email
+message.attention=ВНИМАНИЕ!!!
+message.2fa.text2=Я принимаю все риски связанные с отсутствием двухфакторной авторизации\
+message.2fa.accept=Принимаю
+message.2fa.aggree.toSettings=К настройкам
+message.2fa.decline1=Нет спасибо
+message.2fa.text1=Уважаемые пользователи! <br>\
+На бирже зафиксированы попытки взлома аккаунтов и подбора паролей. <br>\
+Для безопасности Вашего аккаунта просим Вас воспользоваться двухфакторной авторизацией для входа на сайт.
+message.2fa.accept=Принимаю
