--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -1113,9 +1113,17 @@ transaction.hash=Hash
 message.pincode.forlogin=Your pin-code for login to Exrates is {0}
 message.pincode.login.subject=You recieve pincode from Exrates
 message.pin_code=Pin
-message.pin_code.sent.toyou=New pin-code has been sent to your email
+message.pin_code.sent.toyou=Please enter PIN code that was sent to your email
 message.pin_code.incorrect=Pin-code wrong
 message.error_saving_settings=Error saving settings
 message.settings_successfully_saved=Settings saved
 message.2fa.title=2-factor authorization settings
 message.2fa.via_email=Enable 2-factor authorization via email
+message.attention=ATTENTION!!!
+message.2fa.text1=Dear users!<br>\
+The exchange recorded attempts to hijack accounts and find passwords.<br>\
+For the security of your account, please use the two-factor authorization to enter the site.<br>
+message.2fa.decline1=No thanks
+message.2fa.aggree.toSettings=Go to settings
+message.2fa.accept=Accept
+message.2fa.text2=I accept all risks associated with the lack of two-factor authorization
